# PRO_LAB

./: .gitignore  README.md
ros2_ws/eval_results/: plot_euclidean_error.py
ros2_ws/eval_results/Baseline Results/: ekf_eval_20260626_092059.csv  ekf_eval_20260626_092300.csv  ekf_eval_20260626_092613.csv  ekf_eval_20260626_092908.csv  ekf_eval_20260626_093113.csv  ekf_eval_20260626_093312.csv  ekf_eval_20260626_093517.csv  ekf_eval_20260626_093743.csv  ekf_eval_20260626_093953.csv  ekf_eval_20260626_095532.csv  ekf_eval_20260626_101429.csv  ekf_eval_20260626_101631.csv  ekf_eval_20260626_102256.csv  ekf_eval_20260626_102501.csv  ekf_eval_20260626_111743.csv  ekf_eval_20260626_112007.csv  ekf_eval_20260626_113846.csv  ekf_eval_20260626_114119.csv  ekf_eval_20260626_114319.csv  ekf_eval_20260626_114523.csv  ekf_eval_20260626_114732.csv  ekf_eval_20260626_114931.csv  kf_eval_20260625_181613.csv  kf_eval_20260626_092059.csv  kf_eval_20260626_092300.csv  kf_eval_20260626_092613.csv  kf_eval_20260626_092908.csv  kf_eval_20260626_093113.csv  kf_eval_20260626_093312.csv  kf_eval_20260626_093517.csv  kf_eval_20260626_093743.csv  kf_eval_20260626_093953.csv  kf_eval_20260626_095307.csv  kf_eval_20260626_095532.csv  kf_eval_20260626_100357.csv  kf_eval_20260626_102501.csv  kf_eval_20260626_111743.csv  kf_eval_20260626_112007.csv  kf_eval_20260626_114523.csv  kf_eval_20260626_114732.csv  (+16 more)
ros2_ws/eval_results/Q_imu_0.005/: ekf_eval_20260626_102034.csv  ekf_eval_20260626_102708.csv  kf_eval_20260626_102256.csv  pf_eval_20260626_102256.csv  pf_eval_20260626_102501.csv  pf_eval_20260626_102708.csv
ros2_ws/eval_results/Q_imu_0.5/: ekf_eval_20260626_095738.csv  ekf_eval_20260626_100357.csv  ekf_eval_20260626_100709.csv  ekf_eval_20260626_101107.csv  kf_eval_20260626_100049.csv  kf_eval_20260626_100709.csv  kf_eval_20260626_101107.csv  kf_eval_20260626_101631.csv  pf_eval_20260626_095532.csv  pf_eval_20260626_095738.csv  pf_eval_20260626_100357.csv  pf_eval_20260626_101107.csv  pf_eval_20260626_101429.csv
ros2_ws/eval_results/csv/: ekf_eval_20260625_135201.csv  ekf_eval_20260625_140633.csv  ekf_eval_20260625_141128.csv  ekf_eval_20260625_144443.csv  ekf_eval_20260625_181613.csv  ekf_eval_20260626_095307.csv  ekf_eval_20260626_100049.csv  ekf_eval_20260626_103036.csv  ekf_eval_20260626_111450.csv  ekf_eval_20260626_112246.csv  ekf_eval_20260626_123740.csv  kf_eval_20260625_135201.csv  kf_eval_20260625_140633.csv  kf_eval_20260625_141128.csv  kf_eval_20260625_144443.csv  kf_eval_20260626_095738.csv  kf_eval_20260626_101429.csv  kf_eval_20260626_102034.csv  kf_eval_20260626_102708.csv  kf_eval_20260626_103036.csv  kf_eval_20260626_111450.csv  kf_eval_20260626_112246.csv  kf_eval_20260626_113846.csv  kf_eval_20260626_114119.csv  kf_eval_20260626_114319.csv  kf_eval_20260626_114931.csv  kf_eval_20260626_123740.csv  pf_eval_20260625_135201.csv  pf_eval_20260625_140633.csv  pf_eval_20260625_141128.csv  pf_eval_20260625_144443.csv  pf_eval_20260626_100049.csv  pf_eval_20260626_101631.csv  pf_eval_20260626_102034.csv  pf_eval_20260626_103036.csv  pf_eval_20260626_111450.csv  pf_eval_20260626_111743.csv  pf_eval_20260626_113846.csv  pf_eval_20260626_114119.csv  pf_eval_20260626_114319.csv  (+2 more)
ros2_ws/src/: CMakeLists.txt  README.md  package.xml  patrol_node.py
ros2_ws/src/config/: filter_params.yaml
ros2_ws/src/launch/: filter_launch.py
ros2_ws/src/models/apriltag36h11_0/: model.config  model.sdf  tag.mtl
ros2_ws/src/models/apriltag36h11_1/: model.config  model.sdf  tag.mtl
ros2_ws/src/models/apriltag36h11_2/: model.config  model.sdf  tag.mtl
ros2_ws/src/models/apriltag36h11_3/: model.config  model.sdf  tag.mtl
ros2_ws/src/models/apriltag36h11_4/: model.config  model.sdf  tag.mtl
ros2_ws/src/rviz/: rviz_config_default.rviz
ros2_ws/src/src/: EKF_node.cpp  KF_node.cpp  KF_node_manual.cpp  PF_node  PF_node.cpp  apriltag_detector_node.py  eval_node.py
ros2_ws/src/worlds/: depot_apriltags.sdf
(+21 files in other folders)
